{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 152,
  "lineage": "288d79e3-7abe-9901-b3fa-e52554e8835e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0f2172fdc78410c",
            "domain": "vpc",
            "id": "eipalloc-0e0f2172fdc78410c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-111-140-80.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.140.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DEV NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prd_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f9ac0b0f40c49c6",
            "domain": "vpc",
            "id": "eipalloc-02f9ac0b0f40c49c6",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-110-249-52.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.249.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PRD NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "PRD NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "stg_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d416a3b60b7fdc3",
            "domain": "vpc",
            "id": "eipalloc-02d416a3b60b7fdc3",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-40-220.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.40.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "STG NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "STG NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:internet-gateway/igw-088878e3b502440e6",
            "id": "igw-088878e3b502440e6",
            "owner_id": "320085357126",
            "tags": {
              "Name": "DEV IGW"
            },
            "tags_all": {
              "Name": "DEV IGW"
            },
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prd_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:internet-gateway/igw-04d1a84810ae85a2a",
            "id": "igw-04d1a84810ae85a2a",
            "owner_id": "320085357126",
            "tags": {
              "Name": "PRD IGW"
            },
            "tags_all": {
              "Name": "PRD IGW"
            },
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stg_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:internet-gateway/igw-0133a7f9a05522ff2",
            "id": "igw-0133a7f9a05522ff2",
            "owner_id": "320085357126",
            "tags": {
              "Name": "STG IGW"
            },
            "tags_all": {
              "Name": "STG IGW"
            },
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0f2172fdc78410c",
            "connectivity_type": "public",
            "id": "nat-060ca1e46d2e594b3",
            "network_interface_id": "eni-0ea2312b183e4f7ac",
            "private_ip": "10.200.1.112",
            "public_ip": "3.111.140.80",
            "subnet_id": "subnet-02644bd3901c119bb",
            "tags": {
              "Name": "DEV NAT Gateway"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prd_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f9ac0b0f40c49c6",
            "connectivity_type": "public",
            "id": "nat-0af1bb305c0aa0692",
            "network_interface_id": "eni-01d034c44b4d7c75a",
            "private_ip": "10.220.1.19",
            "public_ip": "3.110.249.52",
            "subnet_id": "subnet-05f86555b7423bbe7",
            "tags": {
              "Name": "PRD NAT Gateway"
            },
            "tags_all": {
              "Name": "PRD NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stg_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d416a3b60b7fdc3",
            "connectivity_type": "public",
            "id": "nat-0308562f446a62ab6",
            "network_interface_id": "eni-0ab347ba5341f7293",
            "private_ip": "10.210.1.128",
            "public_ip": "13.234.40.220",
            "subnet_id": "subnet-048fefee6434822ac",
            "tags": {
              "Name": "STG NAT Gateway"
            },
            "tags_all": {
              "Name": "STG NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-05053f087c3f8e560",
            "id": "rtb-05053f087c3f8e560",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-060ca1e46d2e594b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV Private Route Table"
            },
            "tags_all": {
              "Name": "DEV Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-04dae74c8b3ee5ddc",
            "id": "rtb-04dae74c8b3ee5ddc",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-088878e3b502440e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV Public Route Table"
            },
            "tags_all": {
              "Name": "DEV Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-07de9b8425b81a84a",
            "id": "rtb-07de9b8425b81a84a",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af1bb305c0aa0692",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRD Private Route Table"
            },
            "tags_all": {
              "Name": "PRD Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_nat_gateway.prd_NATgw",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-04e89fe8f08478815",
            "id": "rtb-04e89fe8f08478815",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d1a84810ae85a2a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRD Public Route Table"
            },
            "tags_all": {
              "Name": "PRD Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-0daeb0cb43f52edc6",
            "id": "rtb-0daeb0cb43f52edc6",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0308562f446a62ab6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "STG Private Route Table"
            },
            "tags_all": {
              "Name": "STG Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_nat_gateway.stg_NATgw",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:route-table/rtb-02e6f25c904ab83c7",
            "id": "rtb-02e6f25c904ab83c7",
            "owner_id": "320085357126",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0133a7f9a05522ff2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "STG Public Route Table"
            },
            "tags_all": {
              "Name": "STG Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8f00a9b4fdad004",
            "route_table_id": "rtb-05053f087c3f8e560",
            "subnet_id": "subnet-0d5078094e9703d82"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_private_subnet",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f25f251964879fc",
            "route_table_id": "rtb-05053f087c3f8e560",
            "subnet_id": "subnet-04f78820f82532d11"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_private_subnet",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032768581fbc92c8b",
            "route_table_id": "rtb-05053f087c3f8e560",
            "subnet_id": "subnet-0541615a045a5a173"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_private_subnet",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0697a9ba089913bcd",
            "route_table_id": "rtb-04dae74c8b3ee5ddc",
            "subnet_id": "subnet-02644bd3901c119bb"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8021c2901e70ed7",
            "route_table_id": "rtb-04dae74c8b3ee5ddc",
            "subnet_id": "subnet-0ad589917955d62fc"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9a60cf4084ef59",
            "route_table_id": "rtb-04dae74c8b3ee5ddc",
            "subnet_id": "subnet-017196409cd49aaa9"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_public_subnet",
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e617e2819cfd5977",
            "route_table_id": "rtb-07de9b8425b81a84a",
            "subnet_id": "subnet-0b2378ba3431ce045"
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_nat_gateway.prd_NATgw",
            "aws_route_table.prd_PrivateRT",
            "aws_subnet.prd_private_subnet",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0194211f3e924fefa",
            "route_table_id": "rtb-07de9b8425b81a84a",
            "subnet_id": "subnet-00618274405e92f85"
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_nat_gateway.prd_NATgw",
            "aws_route_table.prd_PrivateRT",
            "aws_subnet.prd_private_subnet",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b6225d0de1b4bec",
            "route_table_id": "rtb-07de9b8425b81a84a",
            "subnet_id": "subnet-0a02e41642c6a6d67"
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_nat_gateway.prd_NATgw",
            "aws_route_table.prd_PrivateRT",
            "aws_subnet.prd_private_subnet",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013a0e9e5163d314e",
            "route_table_id": "rtb-04e89fe8f08478815",
            "subnet_id": "subnet-05f86555b7423bbe7"
          },
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_route_table.prd_PublicRT",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f046f2f2bf25c37f",
            "route_table_id": "rtb-04e89fe8f08478815",
            "subnet_id": "subnet-0bfe9eab6a7d36e4f"
          },
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_route_table.prd_PublicRT",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c91513f8fcec8233",
            "route_table_id": "rtb-04e89fe8f08478815",
            "subnet_id": "subnet-0fe926faa6efaa84a"
          },
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_route_table.prd_PublicRT",
            "aws_subnet.prd_public_subnet",
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02139511f487e876e",
            "route_table_id": "rtb-0daeb0cb43f52edc6",
            "subnet_id": "subnet-0b8d7d718d21d55e9"
          },
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_nat_gateway.stg_NATgw",
            "aws_route_table.stg_PrivateRT",
            "aws_subnet.stg_private_subnet",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f963ec80cd666a03",
            "route_table_id": "rtb-0daeb0cb43f52edc6",
            "subnet_id": "subnet-01485761893a02775"
          },
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_nat_gateway.stg_NATgw",
            "aws_route_table.stg_PrivateRT",
            "aws_subnet.stg_private_subnet",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065eaf4072fed98c3",
            "route_table_id": "rtb-0daeb0cb43f52edc6",
            "subnet_id": "subnet-0c3810be6a8233b69"
          },
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_nat_gateway.stg_NATgw",
            "aws_route_table.stg_PrivateRT",
            "aws_subnet.stg_private_subnet",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6309ceebddc916a",
            "route_table_id": "rtb-02e6f25c904ab83c7",
            "subnet_id": "subnet-048fefee6434822ac"
          },
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_route_table.stg_PublicRT",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3376a6c8d9eabea",
            "route_table_id": "rtb-02e6f25c904ab83c7",
            "subnet_id": "subnet-04a895e3100874c45"
          },
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_route_table.stg_PublicRT",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e841251da3edb926",
            "route_table_id": "rtb-02e6f25c904ab83c7",
            "subnet_id": "subnet-01eb0dea00fbfd8b7"
          },
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_route_table.stg_PublicRT",
            "aws_subnet.stg_public_subnet",
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0d5078094e9703d82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.200.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5078094e9703d82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Private Subnet0"
            },
            "tags_all": {
              "Name": "DEV Private Subnet0"
            },
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-04f78820f82532d11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.200.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f78820f82532d11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Private Subnet1"
            },
            "tags_all": {
              "Name": "DEV Private Subnet1"
            },
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0541615a045a5a173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.200.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0541615a045a5a173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Private Subnet2"
            },
            "tags_all": {
              "Name": "DEV Private Subnet2"
            },
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-02644bd3901c119bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.200.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02644bd3901c119bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Public Subnet0"
            },
            "tags_all": {
              "Name": "DEV Public Subnet0"
            },
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0ad589917955d62fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.200.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad589917955d62fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Public Subnet1"
            },
            "tags_all": {
              "Name": "DEV Public Subnet1"
            },
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-017196409cd49aaa9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.200.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017196409cd49aaa9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Public Subnet2"
            },
            "tags_all": {
              "Name": "DEV Public Subnet2"
            },
            "vpc_id": "vpc-0e6b6441231301707"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0b2378ba3431ce045",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.220.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2378ba3431ce045",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Private Subnet0"
            },
            "tags_all": {
              "Name": "PRD Private Subnet0"
            },
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "dependencies": [
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-00618274405e92f85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.220.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00618274405e92f85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Private Subnet1"
            },
            "tags_all": {
              "Name": "PRD Private Subnet1"
            },
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "dependencies": [
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0a02e41642c6a6d67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.220.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a02e41642c6a6d67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Private Subnet2"
            },
            "tags_all": {
              "Name": "PRD Private Subnet2"
            },
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "dependencies": [
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-05f86555b7423bbe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.220.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f86555b7423bbe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Public Subnet0"
            },
            "tags_all": {
              "Name": "PRD Public Subnet0"
            },
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "dependencies": [
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0bfe9eab6a7d36e4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.220.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfe9eab6a7d36e4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Public Subnet1"
            },
            "tags_all": {
              "Name": "PRD Public Subnet1"
            },
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "dependencies": [
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0fe926faa6efaa84a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.220.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe926faa6efaa84a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Public Subnet2"
            },
            "tags_all": {
              "Name": "PRD Public Subnet2"
            },
            "vpc_id": "vpc-070fee9346a32fedd"
          },
          "dependencies": [
            "aws_vpc.prd",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0b8d7d718d21d55e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.210.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8d7d718d21d55e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Private Subnet0"
            },
            "tags_all": {
              "Name": "STG Private Subnet0"
            },
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "dependencies": [
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-01485761893a02775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.210.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01485761893a02775",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Private Subnet1"
            },
            "tags_all": {
              "Name": "STG Private Subnet1"
            },
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "dependencies": [
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-0c3810be6a8233b69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.210.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3810be6a8233b69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Private Subnet2"
            },
            "tags_all": {
              "Name": "STG Private Subnet2"
            },
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "dependencies": [
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-048fefee6434822ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.210.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048fefee6434822ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Public Subnet0"
            },
            "tags_all": {
              "Name": "STG Public Subnet0"
            },
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "dependencies": [
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-04a895e3100874c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.210.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a895e3100874c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Public Subnet1"
            },
            "tags_all": {
              "Name": "STG Public Subnet1"
            },
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "dependencies": [
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:subnet/subnet-01eb0dea00fbfd8b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.210.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eb0dea00fbfd8b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "320085357126",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Public Subnet2"
            },
            "tags_all": {
              "Name": "STG Public Subnet2"
            },
            "vpc_id": "vpc-0aef05ec7fec2ad2f"
          },
          "dependencies": [
            "aws_vpc.stg",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:vpc/vpc-0e6b6441231301707",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.200.0.0/16",
            "default_network_acl_id": "acl-0172b8139ce29dd83",
            "default_route_table_id": "rtb-02792503bdd8c7322",
            "default_security_group_id": "sg-0456c14233d0403f0",
            "dhcp_options_id": "dopt-a914cbc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6b6441231301707",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02792503bdd8c7322",
            "owner_id": "320085357126",
            "tags": {
              "Name": "DEV VPC"
            },
            "tags_all": {
              "Name": "DEV VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:vpc/vpc-070fee9346a32fedd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.220.0.0/16",
            "default_network_acl_id": "acl-061a9f41d0e66fc62",
            "default_route_table_id": "rtb-0e9276551881e318a",
            "default_security_group_id": "sg-00ecc4aefcd1ecef0",
            "dhcp_options_id": "dopt-a914cbc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070fee9346a32fedd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9276551881e318a",
            "owner_id": "320085357126",
            "tags": {
              "Name": "PRD VPC"
            },
            "tags_all": {
              "Name": "PRD VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:320085357126:vpc/vpc-0aef05ec7fec2ad2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.210.0.0/16",
            "default_network_acl_id": "acl-0ce9d6b15ef2b33aa",
            "default_route_table_id": "rtb-0c8f383229d307181",
            "default_security_group_id": "sg-0976cf4e4097e38ea",
            "dhcp_options_id": "dopt-a914cbc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aef05ec7fec2ad2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c8f383229d307181",
            "owner_id": "320085357126",
            "tags": {
              "Name": "STG VPC"
            },
            "tags_all": {
              "Name": "STG VPC"
            }
          }
        }
      ]
    }
  ]
}